--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ crate-type = ["cdylib", "rlib"]
 winit = {version = "0.29", features = ["rwh_05"]}
 env_logger = "0.11.5"
 log = "0.4.22"
-wgpu = "22.1.0"
+wgpu = "22.0"
+pollster = "0.3.0"
 
 
 # wasm settings
@@ -19,10 +20,10 @@ cfg-if = "1.0.0"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
-wgpu = {version = "22.1.0", features = ["webgl"]}
-wasm-bindgen = "0.2.92"
-wasm-bindgen-futures = "0.4.42"
-web-sys = { version = "0.3.69", features = [
+wgpu = {version = "22.0", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.30"
+web-sys = { version = "0.3", features = [
     "Document",
     "Window",
     "Element",
