--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ env_logger = "0.11.5"
 log = "0.4.22"
 wgpu = "22.0"
 pollster = "0.3.0"
-
+bytemuck = {version = "1.16.3", features = ["derive"]}
 
 # wasm settings
 cfg-if = "1.0.0"
